# website

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: deploy.yml
content/: _index.de.md  _index.md
content/about/: _index.md  index.de.md  index.md
content/coc/: _index.md
content/contribute/: index.de.md  index.md
content/imprint/: index.de.md  index.md
content/jobs/: _index.de.md  _index.md  example-rust-developer.de.md  example-rust-developer.md  mainmatter-rust-engineer.md
content/past-hosts/: _index.de.md  _index.md
content/privacy/: index.de.md  index.md
content/sponsors/: _index.md
content/umgebung/: index.de.md  index.md
content/upcoming/: 2025-10-15-rust-munich-1-intro-lightning-talks.md  2025-10-15-rust-munich-1.md
data/events/: 2025-10-15-rust-munich-1.yml  rust-munich-2023-4.yml  rust-munich-2023-5.yml  rust-munich-2024-1.yml  rust-munich-2024-2.yml  rust-munich-2024-3.yml  rust-munich-2024-4.yml  rust-munich-2025-1.yml  rust-munich-2025-2.yml  rust-munich-2025-3.yml  rust-munich-2025-4.yml  rust-munich-2026-1.yml
data/jobs/: example-rust-developer.yml
sass/: main.scss  styles.scss
sass/components/: _marker-underline.scss
sass/theme/: _dark.scss  _light.scss  _variables.scss
styles/: main.scss  tailwind.css
templates/: base.html  event.html  index.html  job.html  jobs.html  page.html  section.html
tools/contentgen/: Cargo.toml
tools/contentgen/src/: main.rs
tools/eventgen/: Cargo.toml
tools/eventgen/src/: main.rs
(+22 files in other folders)
