[package]
name = "eventgen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generate Zola event pages from YAML; optionally publish to Meetup GraphQL API."

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
toml = "0.8"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
